# labotchet_template

./: CMakeLists.txt  README.md  abbreviations.tex  espd.cls  main.tex  preamble.tex  script.cmake
output/: лабораторный_отчет.tgz.sha256
src/: referat.tex  аббревиатуры.tex  введение.tex  заключение.tex  объект_исследования.tex  приложение1.tex  результаты.tex  средство_исследования.tex
